# llfc-chatroom

./: .gitignore  3rdparty.cmake  CMakeLists.txt  README.md
client/llfcchat/: CMakeLists.txt  applyfriend.h
server/: 3rdparty.cmake  CMakeLists.txt
server/ChatServer/: AsioIOServicePool.h  CMakeLists.txt  ChatGrpcClient.h  ChatServiceImpl.cpp  ConfigMgr.h  LogicSystem.cpp  RedisMgr.cpp  RedisMgr.h  StatusGrpcClient.h  UserMgr.cpp  const.h
server/ChatServer2/: CMakeLists.txt  CServer.cpp  CSession.cpp  CSession.h  ChatGrpcClient.cpp  ConfigMgr.cpp  LogicSystem.cpp  MsgNode.cpp  MysqlDao.cpp  MysqlDao.h  RedisMgr.h  UserMgr.cpp
server/GateServer/: AsioIOServicePool.h  CMakeLists.txt  CServer.cpp  GateServer.cpp  HttpConnection.cpp  LogicSystem.cpp  MysqlDao.cpp  MysqlDao.h  RedisMgr.h  StatusGrpcClient.h  VerifyGrpcClient.h  const.h
server/ProtoMessage/: CMakeLists.txt  message.proto
server/StatusServer/: CMakeLists.txt  ChatGrpcClient.h  MysqlDao.cpp  MysqlDao.h  RedisMgr.h  StatusServer.cpp  StatusServiceImpl.cpp  const.h
